--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -25,7 +25,7 @@
                 android:paddingTop="@dimen/activity_horizontal_margin"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textAlignment="center"
-                android:text="order"
+                android:text="Home"
                 android:textStyle="bold"
                 android:textSize="32dp"
                 android:textColor="#ffffff"
@@ -73,7 +73,17 @@
             android:textSize="40dp"
             android:text="Table"
             android:id="@+id/tableButton"/>
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#FFC61717"
+            android:textColor="#ffffff"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textSize="40dp"
+            android:text="Setting"
+            android:id="@+id/settingButton"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
