--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.giao.OrderSystem.Menu">
+    tools:context="com.giao.OrderSystem.Setting">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -17,13 +19,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:background="#3f51B5">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="@dimen/activity_horizontal_margin"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textAlignment="center"
-                android:text="Menu"
+                android:text="Setting"
                 android:textStyle="bold"
                 android:textSize="32dp"
                 android:textColor="#ffffff"
@@ -37,30 +40,68 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:gravity="center_horizontal"
-            android:weightSum="100">
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinner"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="25dp"
-                android:background="#ffffff"
-                android:layout_weight="5"/>
-
-
-            <ListView
+            android:weightSum="95">
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/listView"
+                android:layout_height="match_parent"
+                android:layout_weight="40"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Table"
+                    android:background="#C0C0C0"
+                    android:id="@+id/textView2"
+                    android:layout_marginTop="10dp" />
+                <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="#ffffff"
-                android:layout_weight="90"/>
+                android:id="@+id/listView"/> ></LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:gravity="center_horizontal"
+                android:layout_weight="40">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Food Category"
+                    android:background="#C0C0C0"
+                    android:id="@+id/textView3"
+                    android:layout_marginTop="10dp" />
+
+                <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:id="@+id/listView2"
+                />
+
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:gravity="center_horizontal"
+                android:layout_weight="15">
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_weight="5">
+                android:layout_marginBottom="20dp">
                 <TableRow>
                     <Button
                         android:layout_width="match_parent"
@@ -80,10 +121,10 @@
                         android:textSize="40sp"
                         android:text="Home"
                         android:id="@+id/homeButton"
-                        android:layout_gravity="center_horizontal"
                         android:layout_weight="5" />
                 </TableRow>
             </TableLayout>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
