--- a/app/src/main/res/layout/tables.xml
+++ b/app/src/main/res/layout/tables.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.giao.OrderSystem.MainActivity">
+    tools:context="com.giao.OrderSystem.Tables">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -33,6 +33,52 @@
                 android:id="@+id/textView" />
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="95"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:gravity="center_horizontal"
+            android:weightSum="100">
 
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listView"
+                android:background="#ffffff"
+                android:layout_weight="90"
+                android:layout_marginTop="10dp" />
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="5">
+                <TableRow>
+
+                    <ExpandableListView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textSize="40sp"
+                        android:id="@+id/expandableListView"
+                        android:background="#ffffff"
+                        android:layout_weight="5"/>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="5dp"
+                        android:background="#FFC61717"
+                        android:textColor="#ffffff"
+                        android:textSize="40sp"
+                        android:text="Home"
+                        android:id="@+id/homeButton"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="5" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
