--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -5,13 +5,12 @@
     android:background="@drawable/list_selector"
     android:orientation="vertical"
     android:padding="5dip">
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/EditTableEditText"
         android:layout_weight="90"
-        android:layout_toLeftOf="@+id/button"
+        android:layout_toLeftOf="@+id/DeleteTableButton"
         android:inputType="text"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -21,9 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
-        android:id="@+id/button"
+        android:id="@+id/DeleteTableButton"
         android:layout_weight="10"
-        android:layout_alignBottom="@+id/editText"
+        android:layout_alignBottom="@+id/EditTableEditText"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:contentDescription="TableID" />
 </RelativeLayout>
