--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_selector"
     android:orientation="vertical"
-    android:padding="5dip">
+    android:padding="5dip"
+    android:weightSum="100">
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
