--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.giao.OrderSystem.Setting">
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -16,8 +14,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_height="0dip"
+            android:layout_weight="10"
             android:background="#3f51B5">
             <TextView
                 android:layout_width="match_parent"
@@ -34,8 +32,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="95"
+            android:layout_height="0dip"
+            android:layout_weight="90"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:gravity="center_horizontal"
@@ -43,19 +41,20 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dip"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:layout_weight="45"
+                android:layout_weight="42"
                 android:weightSum="100">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dip"
                     android:layout_gravity="left"
                     android:background="#C0C0C0"
-                    android:layout_weight="5"
-                    android:weightSum="100">
+                    android:layout_weight="20"
+                    android:weightSum="100"
+                    android:paddingLeft="5dp">
                         <EditText
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -75,14 +74,18 @@
                             android:id="@+id/addTableButton"
                             android:layout_weight="5"/>
                  </LinearLayout>
-                <ScrollView
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/scrollView"
-                    android:layout_weight="95">
+                    android:layout_height="0dip"
+                    android:layout_gravity="left"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_weight="80">
+
                     <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:animationCache="false"
                     android:scrollingCache="false"
                     android:smoothScrollbar="true"
@@ -91,24 +94,24 @@
                     android:dividerHeight="1dp"
                     android:id="@+id/tableListView"
                     />
-                </ScrollView>
-
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dip"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:layout_weight="45"
+                android:layout_weight="42"
                 android:weightSum="100">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dip"
                     android:layout_gravity="left"
                     android:background="#C0C0C0"
-                    android:layout_weight="5"
+                    android:layout_weight="20"
+                    android:paddingLeft="5dp"
                     android:weightSum="100">
 
                         <EditText
@@ -130,28 +133,31 @@
                             android:id="@+id/addCategoryButton"
                             android:layout_weight="5"/>
                    </LinearLayout>
-                <ScrollView
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/scrollView1"
-                    android:layout_weight="95">
+                    android:layout_height="0dip"
+                    android:layout_gravity="left"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_weight="80">
                 <ListView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="#ffffff"
                 android:divider="#b5b5b5"
                 android:dividerHeight="1dp"
                 android:id="@+id/categoryListView"/>
-                </ScrollView>
+                    </LinearLayout>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dip"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:gravity="center_horizontal"
-                android:layout_weight="10">
+                android:layout_weight="16">
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
