--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -147,6 +147,7 @@
                 android:background="#ffffff"
                 android:divider="#b5b5b5"
                 android:dividerHeight="1dp"
+                android:descendantFocusability="beforeDescendants"
                 android:id="@+id/categoryListView"/>
                     </LinearLayout>
 
