--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -12,7 +12,8 @@
         android:layout_weight="85"
         android:layout_toLeftOf="@+id/DeleteTableButton"
         android:singleLine="true"
-        android:inputType="text" />
+        android:textColor="#000000"
+        android:inputType="text"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
