--- a/app/src/main/res/layout/listview_layout2.xml
+++ b/app/src/main/res/layout/listview_layout2.xml
@@ -7,21 +7,23 @@
     android:padding="5dip"
     android:weightSum="100">
     <EditText
-        android:layout_width="0dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/EditCategoryEditText"
         android:layout_weight="85"
         android:layout_toLeftOf="@+id/DeleteCategoryButton"
+        android:singleLine="true"
+        android:textColor="#000000"
         android:inputType="text"
       />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="0dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
         android:id="@+id/DeleteCategoryButton"
         android:layout_weight="15"
-        android:layout_alignBottom="@+id/EditCategoryEditText"
-        android:contentDescription="CategoryName" />
+        android:layout_alignBottom="@+id/EditTableEditText"
+        android:contentDescription="CategoryName"  />
 </LinearLayout>
