--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -42,7 +42,7 @@
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="0dip"
-                android:id="@+id/spinner"
+                android:id="@+id/categorySpinner"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="#ffffff"
@@ -52,7 +52,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:id="@+id/listView"
+                android:id="@+id/categorylistView"
                 android:background="#ffffff"
                 android:layout_weight="85"/>
             <TableLayout
@@ -69,7 +69,7 @@
                         android:textColor="#ffffff"
                         android:textSize="40sp"
                         android:text="Save"
-                        android:id="@+id/saveButton"
+                        android:id="@+id/saveMenuButton"
                         android:layout_weight="5"/>
                     <Button
                         android:layout_width="match_parent"
