--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -40,7 +40,7 @@
             android:weightSum="100">
 
             <Spinner
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:id="@+id/categorySpinner"
                 android:layout_marginTop="10dp"
@@ -54,13 +54,13 @@
                 android:layout_height="0dip"
                 android:id="@+id/categorylistView"
                 android:background="#ffffff"
-                android:layout_weight="85"/>
+                android:layout_weight="80"/>
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="7">
+                android:layout_weight="12">
                 <TableRow>
                     <Button
                         android:layout_width="match_parent"
