--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -1,9 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.giao.OrderSystem.Menu">
     <LinearLayout
         android:orientation="vertical"
@@ -43,6 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:id="@+id/categorySpinner"
+                android:spinnerMode="dropdown"
+                android:clickable="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="#ffffff"
