--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -25,7 +25,7 @@
                 android:textStyle="bold"
                 android:textSize="32dp"
                 android:textColor="#ffffff"
-                android:id="@+id/textView" />
+                android:id="@+id/SelectecItemtextView" />
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
@@ -39,14 +39,14 @@
 
             <Spinner
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
+                android:layout_height="wrap_content"
                 android:id="@+id/categorySpinner"
                 android:spinnerMode="dropdown"
                 android:clickable="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="#ffffff"
-                android:layout_weight="8"/>
+                />
 
             <ListView
                 android:layout_width="match_parent"
