--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -20,7 +20,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:textSize="20sp"
     android:textColor="#ff0000"
     android:text="item"/>
