--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="wrap_content"
             android:layout_weight="10"
             android:background="#3f51B5">
             <TextView
@@ -33,7 +33,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="match_parent"
             android:layout_weight="90"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
@@ -42,15 +42,15 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:layout_weight="42"
+                android:layout_weight="40"
                 android:weightSum="100">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:background="#C0C0C0"
                     android:layout_weight="20"
@@ -78,12 +78,11 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:layout_weight="80">
-
                     <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -91,21 +90,21 @@
                     android:divider="#b5b5b5"
                     android:dividerHeight="1dp"
                     android:id="@+id/tableListView"
-                    />
+                        android:isScrollContainer="false"/>
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:layout_weight="42"
+                android:layout_weight="40"
                 android:weightSum="100">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:background="#C0C0C0"
                     android:layout_weight="20"
@@ -133,7 +132,7 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -144,17 +143,18 @@
                     android:background="#ffffff"
                     android:divider="#b5b5b5"
                     android:dividerHeight="1dp"
-                android:id="@+id/categoryListView"/>
+                android:id="@+id/categoryListView"
+                    android:isScrollContainer="false"/>
                     </LinearLayout>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:gravity="center_horizontal"
-                android:layout_weight="16">
+                android:layout_weight="20">
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
