--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:padding="5dip"
     android:weightSum="100">
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/EditTableEditText"
